Form not showing correct data after submission - testing solution 1

--- a/wp-content/themes/samba-child/style.css
+++ b/wp-content/themes/samba-child/style.css
@@ -1085,6 +1085,7 @@ color: rgb(255, 255, 255);
 .frm_style_formidable-style.with_frm_style .frm_form_field select:focus,
 .contact-cover.contact-inline .frm_form_field select:focus {
 	color: rgba(0, 0, 0, 0) !important;
+	background-color: transparent !important;
 }
 .frm_style_formidable-style.with_frm_style .frm_form_field select option,
 .contact-cover.contact-inline .frm_form_field select option {
